# zenux-core

./: CMakeLists.txt  README.md  ZenuxCoreConfig.cmake.in
testlib-common/: CMakeLists.txt  signalspywaiter.cpp  signalspywaiter.h  signalspywaiterwithprocesstimers.cpp  signalspywaiterwithprocesstimers.h  testloghelpers.cpp  testloghelpers.h
testlibs/: CMakeLists.txt
testlibs/common/: CMakeLists.txt  signalspywaiter.cpp  signalspywaiter.h  signalspywaiterwithprocesstimers.cpp  signalspywaiterwithprocesstimers.h  testfloatingpointhelper.cpp  testfloatingpointhelper.h  testloghelpers.cpp  testloghelpers.h
testlibs/memallocs/testlib/: CMakeLists.txt  allocationdatadefinitions.h  analysispertracepoint.cpp  analysispertracepoint.h  backtraceconverter.cpp  backtraceconverter.h  backtracerawtools.cpp  backtracerawtools.h  backtracetreegenerator.cpp  backtracetreegenerator.h  memoryallocbacktracegenerator.cpp  memoryalloctracker.cpp  memoryalloctracker.h  memoryalloctrackerhooks.cpp  testbacktracegenerator.cpp  testbacktracegenerator.h
testlibs/memallocs/tests/: CMakeLists.txt  test_backtrace_converter.cpp  test_backtrace_converter.h  test_backtrace_tree_generator.cpp  test_backtrace_tree_generator.h  test_memallocs_atomic.cpp  test_memallocs_atomic.h
testlibs/openfiles/testlib/: CMakeLists.txt  openfiletrackertestdefaults.h  testopenfiletracker.cpp
testlibs/openfiles/tests/: CMakeLists.txt  test_openfiletracker.cpp  test_openfiletracker_atomic.cpp  test_openfiletracker_atomic.h
testlibs/testlib-backtrace/testlib/: CMakeLists.txt  testbacktracegenerator.cpp  testbacktracegenerator.h
testlibs/testlib-backtrace/tests/: CMakeLists.txt  test_backtrace_generator.cpp  test_backtrace_generator.h  test_memory_alloc_backtrace_generator.cpp
testlibs/xml-compare/lib/: CMakeLists.txt  svgfuzzyattributecomparefunction.cpp  svgfuzzyattributecomparefunction.h  svgfuzzycompare.cpp  svgfuzzycompare.h  xmldocument.cpp  xmldocument.h  xmldocumentcompare.cpp  xmldocumentcompare.h  xmlelemcompareattribs.cpp  xmlelemcompareattribs.h  xmlelemcomparetext.cpp
zenux-device-info/: CMakeLists.txt  zenuxdeviceinfo.cpp  zenuxdeviceinfo.h
zera-crc/lib/: CMakeLists.txt  crc32isohdlc.cpp  crc32isohdlc.h  crc8maxim.cpp  crc8maxim.h  pseudocrcbuffer.cpp  pseudocrcbuffer.h
zera-crc/tests/: CMakeLists.txt  test_crc32_iso_hdlc.cpp  test_crc32_iso_hdlc.h  test_crc8_maxim.cpp  test_crc8_maxim.h  test_pseudo_crc_buffer.cpp  test_pseudo_crc_buffer.h
zera-jsonobject-to-string/lib/: CMakeLists.txt  jsonprecisionexport.cpp  jsonprecisionexport.h
zera-jsonobject-to-string/tests/: CMakeLists.txt  test-data.qrc  test_convert_array.cpp  test_convert_array.h  test_convert_object.cpp  test_convert_object.h  test_convert_value.cpp  test_convert_value.h
zera-jsonobject-to-string/tests/test-data/: exportObjectOfNestedAllTab0.json  exportObjectOfNestedAllTab2.json  exportObjectOneNullValueTab0.json  exportObjectOneNullValueTab2.json  exportObjectTwoArraysOfStringsTab0.json  exportObjectTwoArraysOfStringsTab2.json  exportObjectTwoEmptyArraysTab0.json  exportObjectTwoEmptyArraysTab2.json  exportObjectTwoEmptyObjectsTab0.json  exportObjectTwoEmptyObjectsTab2.json  exportObjectTwoNullValueTab0.json  exportObjectTwoNullValueTab2.json
zera-log-statistics/lib/: CMakeLists.txt  logstatisticsasyncfloat.cpp  logstatisticsasyncfloat.h  logstatisticsasyncint.cpp  logstatisticsasyncint.h
zera-log-statistics/tests/: CMakeLists.txt  test_log_statistics_async_float.cpp  test_log_statistics_async_float.h  test_log_statistics_async_int.cpp  test_log_statistics_async_int.h
zera-math/: CMakeLists.txt
zera-scpi-cmd-preparation/: CMakeLists.txt
zera-tasks-base/lib/: CMakeLists.txt  taskcontainerinterface.h  taskcontainerparallel.cpp  taskcontainerparallel.h  taskcontainerqueue.cpp  taskcontainerqueue.h  taskcontainersequence.cpp  taskcontainersequence.h  taskdecoratorerrorhandler.cpp  taskdecoratorerrorhandler.h  taskdecoratortimeout.cpp  taskdecoratortimeout.h  taskextraerrorhandler.cpp  taskextraerrorhandler.h  taskimmediatelambda.cpp  taskimmediatelambda.h  tasklambdarunner.cpp  tasklambdarunner.h  taskparallel.cpp  taskparallel.h  tasksequence.cpp  tasksequence.h  tasktemplate.cpp  tasktemplate.h  tasktimeoutdecorator.cpp  tasktimeoutdecorator.h
zera-tasks-base/testlib/: CMakeLists.txt  taskfortest.cpp  taskfortest.h  tasktesthelper.cpp  tasktesthelper.h
zera-tasks-base/tests/: CMakeLists.txt  test_taskcontainerparallel.cpp  test_taskcontainerparallel.h  test_taskcontainerqueue.cpp  test_taskcontainerqueue.h  test_taskcontainersequence.cpp  test_taskcontainersequence.h  test_taskdecoratorerrorhandler.cpp  test_taskdecoratorerrorhandler.h  test_taskdecoratortimeout.cpp  test_taskdecoratortimeout.h  test_taskextraerrorhandler.cpp  test_taskimmediatelambda.cpp  test_tasklambdarunner.cpp  test_tasklambdarunner.h  test_taskparallel.cpp  test_tasksequence.cpp  test_timeoutdecorator.cpp
zera-timers/demolib/: CMakeLists.txt  demoeventloopfeeder.cpp  demoeventloopfeeder.h
zera-timers/lib/: CMakeLists.txt  timerfactoryqt.cpp  timerfactoryqt.h  timerperiodicqt.cpp  timerperiodicqt.h  timersingleshotqt.cpp  timersingleshotqt.h  timertemplateqt.cpp  timertemplateqt.h  zeratimerfactorymethods.cpp  zeratimerfactorymethods.h
zera-timers/testlib/: CMakeLists.txt  realdelaytimerhelpers.h  timemachinefortest.cpp  timemachinefortest.h  timemachineobject.cpp  timemachineobject.h  timerfactoryqtfortest.cpp  timerfactoryqtfortest.h  timerfortestinterface.h  timerfortestperiodic.cpp  timerfortestperiodic.h  timerfortestsingleshot.cpp  timerfortestsingleshot.h  timerfortesttemplate.cpp  timerfortesttemplate.h  timertestdefaults.h  zeratimerfactorymethodstest.cpp
zera-timers/tests/: CMakeLists.txt  test_current_time.cpp  test_current_time.h  test_timerperiodicqt.cpp  test_timerperiodicqt.h  test_timersingleshotqt.cpp  test_timersingleshotqt.h
zera-xmlconfig/lib/: CMakeLists.txt  xmlconfigreader.cpp  xmlconfigreader.h
zera-xmlconfig/tests/: CMakeLists.txt  test_xmlconfigreader.cpp  test_xmlconfigreader.h
(+32 files in other folders)
